kubernetes/worker.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: worker
  namespace: ai-task-platform

spec:
  replicas: 2

  selector:
    matchLabels:
      app: worker

  template:
    metadata:
      labels:
        app: worker

    spec:
      containers:
      - name: worker
        image: prajwal1050/ai-task-worker:867c7360043543f4d2284f98267f4c7bc2c54f3b

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "256Mi"
